--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
 	<title>A Snake Game in Javascript</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
