--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div id="scoreboard">
+
+<div id="container">
+<div id="scorecard">
 	
 </div>
-<div id="container">
 	<canvas id="canvas">Your Browser does not support Canvas, please upgrade</canvas>
 	<div></div>
 	<div id="button_container">
@@ -27,7 +28,7 @@
 </div>
 </div>
 
-<script src="snake.js" type="text/javascript" charset="utf-8" async defer></script>
-<script src="index.js" type="text/javascript" charset="utf-8" async defer></script>
+
+<script src="Js.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
